--- a/html/assets/style.css
+++ b/html/assets/style.css
@@ -23,6 +23,10 @@ main {
     margin-top: 50px;
 }
 
+main ol li, main ul li {
+    margin-bottom: 7px;
+}
+
 a {
     color: rgb(150,250,250);
 }
@@ -51,6 +55,13 @@ button {
     cursor: pointer;
     background: rgb(30,130,130);
     color: #fff;
+}
+
+code {
+    background: #222;
+    color: #ddd;
+    font-size: 17px;
+    padding: 1px;
 }
 
 /**************/
@@ -234,9 +245,10 @@ footer> nav > ul li a {
 /*** Centered page ***/
 /*********************/
 
-main.centered-page form {
+main.centered-page {
     max-width: 700px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 main.centered-page h1,
