--- a/classless-semantic.css
+++ b/classless-semantic.css
@@ -31,6 +31,11 @@ a {
     color: rgb(150,250,250);
 }
 
+a:hover {
+    color: rgb(130,230,230);
+    text-decoration: underline;
+}
+
 h1 {
     font-size: 40px;
 }
@@ -57,6 +62,10 @@ button {
     color: #fff;
 }
 
+button:hover {
+    background: rgb(10,110,110);
+}
+
 code {
     background: #222;
     color: #ddd;
@@ -77,6 +86,11 @@ header > a {
     float: left;
     margin-right: 30px;
     font-weight: bold;
+}
+
+header > a:hover {
+    text-decoration: none;
+    color: #eee;
 }
 
 header > nav {
@@ -106,7 +120,7 @@ header nav ul li a {
 
 header > details {
     display: none;
-    background: #222;
+    background: #111;
     position: absolute;
     right: 15px;
     top: 15px;
@@ -138,7 +152,7 @@ header > details > summary {
     font-weight: bold;
     float: right;
     padding: 5px 10px;
-    background: #222;
+    background: #111;
 }
 
 @media (max-width: 750px) {
