--- a/classless-semantic.css
+++ b/classless-semantic.css
@@ -3,13 +3,13 @@
 /*** Base styles ***/
 /*******************/
 
-* {
-    box-sizing: border-box;
+*, *::before, *::after {
+  box-sizing: border-box;
 }
 
 body {
     background: black;
-    color: #eee; /*#bbc6ce*/
+    color: #eee;
     padding: 20px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 18px;
@@ -21,10 +21,15 @@ body {
 main {
     clear: both;
     margin-top: 50px;
+    overflow: hidden;
 }
 
 main ol li, main ul li {
     margin-bottom: 7px;
+}
+
+ul ul, ol ol, ul ol, ol ul {
+    margin-top: 7px;
 }
 
 a {
@@ -71,6 +76,28 @@ code {
     color: #ddd;
     font-size: 17px;
     padding: 1px;
+}
+
+summary {
+    cursor: pointer;
+    user-select: none;
+}
+
+details:not(header > details) {
+    background: #111;
+    padding: 15px;
+    border: 1px solid #333;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+blockquote {
+    border-left: 4px solid #444;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 15px;
+    color: #aaa;
+    font-style: italic;
 }
 
 /**************/
@@ -146,8 +173,6 @@ header > details > nav > ul li:last-child a {
 }
 
 header > details > summary {
-    cursor: pointer;
-    user-select: none;
     font-size: 16px;
     font-weight: bold;
     float: right;
@@ -268,4 +293,33 @@ main.centered-page {
 main.centered-page h1,
 main.centered-page p {
     text-align: center;
+}
+
+/***********************/
+/*** Helper classess ***/
+/***********************/
+
+[role="alert"] {
+    border-radius: 5px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 10px;
+}
+
+[role="alert"].red-alert {
+    border: 1px solid #ff5555;
+    background: #330000;
+    color: #ffaaaa;
+}
+
+[role="alert"].yellow-alert {
+    border: 1px solid #ffdd55;
+    background: #332a00;
+    color: #ffecaa;
+}
+
+[role="alert"].green-alert {
+    border: 1px solid #55ff55;
+    background: #003300;
+    color: #aaffaa;
 }
