--- a/classless-semantic.css
+++ b/classless-semantic.css
@@ -223,6 +223,15 @@ input::placeholder, textarea::placeholder {
 textarea {   
     height: 150px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: block;
+}
+
+form .helper-text {
+    font-size: 14px;
+    color: #ccc;
+    margin-top: -10px;
+    margin-bottom: 10px;
+    text-align: right !important;
 }
 
 /**************/
