--- a/classless-semantic.css
+++ b/classless-semantic.css
@@ -351,6 +351,23 @@ main.centered-page p {
 /*** Helper classess ***/
 /***********************/
 
+#skip-to-main {
+    display: block;
+    position: absolute;
+    left: -999px;
+    top: -999px;
+    background: #111;
+    color: #eee;
+    padding: 10px 15px;
+    z-index: 100;
+    text-decoration: none;
+}
+
+#skip-to-main:focus {
+    top: 0;
+    left: 0;
+}
+
 [role="alert"] {
     border-radius: 5px;
     margin-top: 20px;
