--- a/classless-semantics.css
+++ b/classless-semantics.css
@@ -3,6 +3,10 @@
 /*** Base styles ***/
 /*******************/
 
+:root {
+  color-scheme: light dark;
+}
+
 *, *::before, *::after {
   box-sizing: border-box;
 }
@@ -96,7 +100,7 @@ button:disabled {
 }
 
 button ~ button {
-    margin-bottom: 15px;
+    margin-top: 10px;
 }
 
 code {
@@ -158,7 +162,7 @@ img {
 dialog {
     border: none;
     border-radius: 8px;
-    padding: 20px;
+    padding: 30px;
     background: #111;
     color: #eee;
     box-shadow: 0 4px 8px rgba(0,0,0,0.5);
@@ -168,6 +172,10 @@ dialog {
 
 dialog::backdrop {
     background: rgba(0, 0, 0, 0.7);
+}
+
+small {
+    font-weight: 500;
 }
 
 /**************/
@@ -398,6 +406,12 @@ tfoot td {
     background: #222;
 }
 
+td button {
+    margin-bottom: 5px;
+    margin-top: 5px;
+    display: inline-block;
+}
+
 /**************/
 /*** Footer ***/
 /**************/
@@ -474,6 +488,11 @@ main.centered-page p {
     margin-right: auto;
 }
 
+[role="alert"] a {
+    font-weight: bold;
+    color: inherit;
+}
+
 [role="alert"].red-alert {
     border: 1px solid #ff5555;
     background: #330000;
@@ -523,10 +542,19 @@ main.centered-page p {
 .grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
-    gap: 10px;
+    gap: 20px;
+    margin-top: 20px;
 }
 
 .grid > div {
-    background-color: #111;
-    padding: 10px;
+    margin-bottom: 15px;
+}
+
+.grid a img {
+    border-radius: 10px;
+    display: block;
+}
+
+.responsive-table {
+    overflow-x: auto;
 }
