--- a/classless-semantics.css
+++ b/classless-semantics.css
@@ -112,6 +112,10 @@ h6 {
     font-size: 16px;
 }
 
+main > h1 {
+    margin-top: 0px;
+}
+
 button {
     border: none;
     padding: 12px 20px;
@@ -214,6 +218,12 @@ dialog::backdrop {
 
 small {
     font-weight: 500;
+}
+
+hr {
+    border: none;
+    height: 1px;
+    background-color: #333;
 }
 
 /**************/
