--- a/classless-semantics.css
+++ b/classless-semantics.css
@@ -228,6 +228,25 @@ hr {
     background-color: #333;
 }
 
+del {
+    color: #FFCCCB;
+}
+
+ins {
+    color: #90EE90;
+    text-decoration: none;
+}
+
+kbd {
+    background: #222;
+    color: #eee;
+    border: 1px solid #444;
+    border-radius: 4px;
+    padding: 2px 5px;
+    font-size: 16px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
 /**************/
 /*** Header ***/
 /**************/
