--- a/vanilla-web-templates.css
+++ b/vanilla-web-templates.css
@@ -186,6 +186,12 @@ figure {
     margin: 0px;
 }
 
+figure img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 figcaption {
     padding: 2px;
     text-align: center;
