--- a/templates/posts.html
+++ b/templates/posts.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>vanilla-web-templates.css</title>
+    <title>vanilla-web-templates</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <link rel="icon" type="image/png" href="../images/favicon.png">
     <link rel="stylesheet" type="text/css" href="../vanilla-web-templates.css">
-    <script src="../vanilla-web-templates.js" defer></script>
+    <script src="../vanilla-web-templates.js"></script>
 </head>
 <body>
 
@@ -20,6 +20,7 @@
             <li><a href="../index.html#templates">Templates</a></li>
             <li><a href="../index.html#usage">Usage</a></li>
             <li><a href="https://github.com/dandalpiaz/vanilla-web-templates">GitHub</a></li>
+            <li><button id="light-toggle" onclick="toggleLight()" aria-label="toggle color mode">🌗</button></li>
         </ul>
     </nav>
     <details>
@@ -29,6 +30,7 @@
                 <li><a href="../index.html#templates">Templates</a></li>
                 <li><a href="../index.html#usage">Usage</a></li>
                 <li><a href="https://github.com/dandalpiaz/vanilla-web-templates">GitHub</a></li>
+                <li><button id="light-toggle" onclick="toggleLight()" aria-label="toggle color mode">🌗</button></li>
             </ul>
         </nav>
     </details>
@@ -80,7 +82,7 @@
         </div>
     </div>
 
-    <div style="margin-bottom: 15px; background: rgb(15,15,15);">
+    <div style="margin-bottom: 15px;">
         <img style="float: left;" src="https://picsum.photos/id/1012/77/77" alt="Placeholder image example" />
         <div style="vertical-align: top; margin-left: 90px; position: relative; bottom: 8px;">
             <a href="#" style="text-decoration: none;  font-weight: 400;">Another Sample Post Title Goes Here and Also Here</a><br>
