--- a/templates/contact.html
+++ b/templates/contact.html
@@ -49,7 +49,7 @@
             <legend>Contact Us</legend>
 
             <label for="email">Email Address*</label>
-            <input type="text" id="email" placeholder="jane.doe@gmail.com" aria-describedby="helper1" required>
+            <input type="email" id="email" placeholder="jane.doe@gmail.com" aria-describedby="helper1" required>
             <p id="helper1" class="helper-text">(*required)</p>
 
             <label for="subject">Subject*</label>
