--- a/templates/posts.html
+++ b/templates/posts.html
@@ -40,6 +40,8 @@
     <details open>
         <summary>Create, Search, Sort, & Filter</summary>
 
+        <div role="alert" class="yellow-alert">Sample forms do not function</div>
+
         <button style="width: 100%;">+ New Post</button>
 
         <p>Use the options below to search, sort, or filter posts.</p>
@@ -69,34 +71,36 @@
 
 <main id="main">
 
-    <!--<div role="alert" class="yellow-alert">Sample page, forms do not function</div>-->
-
     <h1>Posts Aggregator (template)</h1>
 
-    <div style="margin-bottom: 15px; margin-top: 15px;">
-        <img style="float: left;" src="https://picsum.photos/id/1011/77/77" alt="Placeholder image example" />
-        <div style="vertical-align: top; margin-left: 90px; position: relative; bottom: 8px;">
-            <a href="#" style="text-decoration: none;  font-weight: 500;">A Sample Post Title Goes Here and Also Here</a><br>
-            <small style="font-weight: 400;">9 hours ago by testuser to r/test</small><br>
-            <small>123 comments // ▲ 456 upvotes</small>
-        </div>
-    </div>
+    <p>TBD description of template.</p>
 
-    <div style="margin-bottom: 15px;">
-        <img style="float: left;" src="https://picsum.photos/id/1012/77/77" alt="Placeholder image example" />
-        <div style="vertical-align: top; margin-left: 90px; position: relative; bottom: 8px;">
-            <a href="#" style="text-decoration: none;  font-weight: 500;">Another Sample Post Title Goes Here and Also Here</a><br>
-            <small style="font-weight: 400;">1 day ago by anotheruser to r/test</small><br>
-            <small>78 comments // ▲ 123 upvotes</small>
+    <div>
+        <div style="margin-bottom: 15px; line-height: 1.5; margin-top: 45px;">
+            <img style="float: left;" src="https://picsum.photos/id/1011/77/77" alt="Placeholder image example" />
+            <div style="vertical-align: top; margin-left: 90px; position: relative; bottom: 8px;">
+                <a href="#" style="text-decoration: none;  font-weight: 500;">A Sample Post Title Goes Here and Also Here</a><br>
+                <small style="font-weight: 400;">9 hours ago by testuser to r/test</small><br>
+                <small>123 comments // ▲ 456 upvotes</small>
+            </div>
         </div>
-    </div>
 
-    <div style="margin-bottom: 15px;">
-        <img style="float: left;" src="https://picsum.photos/id/1013/77/77" alt="Placeholder image example" />
-        <div style="vertical-align: top; margin-left: 90px; position: relative; bottom: 8px;">
-            <a href="#" style="text-decoration: none;  font-weight: 500;">Yet Another Sample Post Title Goes Here and Also Here</a><br>
-            <small style="font-weight: 400;">3 days ago by sampleuser to r/test</small><br>
-            <small>34 comments // ▲ 89 upvotes</small>
+        <div style="margin-bottom: 15px; line-height: 1.5;">
+            <img style="float: left;" src="https://picsum.photos/id/1012/77/77" alt="Placeholder image example" />
+            <div style="vertical-align: top; margin-left: 90px; position: relative; bottom: 8px;">
+                <a href="#" style="text-decoration: none;  font-weight: 500;">Another Sample Post Title Goes Here and Also Here</a><br>
+                <small style="font-weight: 400;">1 day ago by anotheruser to r/test</small><br>
+                <small>78 comments // ▲ 123 upvotes</small>
+            </div>
+        </div>
+
+        <div style="margin-bottom: 15px; line-height: 1.5;">
+            <img style="float: left;" src="https://picsum.photos/id/1013/77/77" alt="Placeholder image example" />
+            <div style="vertical-align: top; margin-left: 90px; position: relative; bottom: 8px;">
+                <a href="#" style="text-decoration: none;  font-weight: 500;">Yet Another Sample Post Title Goes Here and Also Here</a><br>
+                <small style="font-weight: 400;">3 days ago by sampleuser to r/test</small><br>
+                <small>34 comments // ▲ 89 upvotes</small>
+            </div>
         </div>
     </div>
 
