--- a/vanilla-web-templates.css
+++ b/vanilla-web-templates.css
@@ -106,12 +106,18 @@
 body {
     background: var(--background-color);
     color: var(--text-color);
-    padding: 20px 18px;
+    padding: 20px 30px;
     font-family: 'Segoe UI', -apple-system, BlinkMacSystemFont, Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 18px;
     line-height: 1.75;
     margin: 0px;
     overflow-wrap: break-word;
+}
+
+@media (max-width: 750px) {
+    body {
+        padding: 20px 18px;
+    }
 }
 
 body > main, body > header, body > footer {
@@ -394,6 +400,10 @@ header nav ul li {
     margin-right: 15px;
 }
 
+header nav ul li:last-child {
+    margin-right: 0px;
+}
+
 header nav ul li a {
     font-size: 15px;
     font-weight: 500;
@@ -406,10 +416,10 @@ header nav ul li a {
 header > details {
     display: none;
     background: var(--details-bg-color);
+    border: 1px solid var(--details-border-color);
     position: absolute;
     right: 20px;
     top: 15px;
-    border: 1px solid var(--details-border-color);
     max-width: 70%;
     z-index: 100;
 }
