Remove unused template and sample code

--- a/templates/grid.html
+++ b/templates/grid.html
@@ -38,20 +38,8 @@
 
 <aside class="right-sidebar">
     <details open>
-        <summary>Related Links</summary>
-        <nav aria-label="Related Links">
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="grid.html">Grid Example</a></li>
-                <li><a href="crud.html">CRUD Example</a></li>
-                <li><a href="contact.html">Contact Form</a></li>
-                <li><a href="login.html">Login Form</a></li>
-            </ul>
-        </nav>
-        <details>
-            <summary>Test 123</summary>
-            <p>This is a test.</p>
-        </details>
+        <summary>Sidebar Content</summary>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Auctor elit sed vulputate mi. Pellentesque elit ullamcorper dignissim cras.</p>
     </details>
 </aside>
 
@@ -62,8 +50,6 @@
     <h1>Grid (template)</h1>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-    <input type="search" placeholder="Filter Search..." aria-label="Search through items" />
 
     <div class="grid" role="list">
         <div role="listitem">
